fix(LOC-2729): Fix scrolling and left align fix in admin button

--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@
 
 .LinkChecker_VirtualTable_Header_Fill {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: flex-start;
 	align-items: center;
 	min-width: 80px;
 }
